oc/dev/s_ptl.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
  name: ptl
spec:
  ports:
  - name: ptl
    port: 80
    targetPort: http
  selector:
    name: ptl
